testdata/invalid/internal/infra/postgres/impl.go
package postgres

import _ "github.com/kimtaeyun/testproject-invalid/internal/domain/user"

type RepoImpl struct{} // violation: Impl suffix
